# ChangeLog for media-libs/speex
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/speex/ChangeLog,v 1.65 2007/11/09 14:35:41 armin76 Exp $

  09 Nov 2007; Raúl Porcel <armin76@gentoo.org> speex-1.2_beta2.ebuild:
  alpha/ia64/sparc stable wrt #197937

  06 Nov 2007; Markus Rothe <corsair@gentoo.org> speex-1.2_beta2.ebuild:
  Stable on ppc64; bug #197937

  06 Nov 2007; Jeroen Roovers <jer@gentoo.org> speex-1.2_beta2.ebuild:
  Stable for HPPA (bug #197937).

  04 Nov 2007; Lars Weiler <pylon@gentoo.org> speex-1.2_beta2.ebuild:
  stable ppc, bug #197937

  03 Nov 2007; Samuli Suominen <drac@gentoo.org> speex-1.2_beta2.ebuild:
  amd64/arm stable wrt #197937.

  26 Oct 2007; Jeroen Roovers <jer@gentoo.org> speex-1.1.12.ebuild:
  Stable for HPPA too. Fixed quoting issues.

  27 Aug 2007; Samuli Suominen <drac@gentoo.org> speex-1.2_beta2.ebuild:
  Add largefile support.

*speex-1.2_beta2 (27 Aug 2007)

  27 Aug 2007; Samuli Suominen <drac@gentoo.org>
  +files/speex-1.2_beta2-optional-ogg-and-cflags.patch,
  +speex-1.2_beta2.ebuild:
  Version bump with patch optionalizing ogg as requested in previous ebuild.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> speex-1.1.12.ebuild:
  ppc. stable

  26 Jul 2007; Raúl Porcel <armin76@gentoo.org> speex-1.1.12.ebuild:
  alpha/ia64 stable

  16 Apr 2007; Markus Rothe <corsair@gentoo.org> speex-1.1.12.ebuild:
  Stable on ppc64

  22 Mar 2007; Steve Dibb <beandog@gentoo.org> -speex-1.1.5.ebuild:
  Remove old version

  01 Mar 2007; <genstef@gentoo.org> ChangeLog:
  Dropped ppc-macos keyword, see you in prefix

  18 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> speex-1.1.12.ebuild:
  Stable on sparc

  18 Jan 2007; Christian Faulhammer <opfer@gentoo.org> speex-1.1.12.ebuild:
  stable x86, bug #147795

  17 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> speex-1.1.11.1.ebuild,
  speex-1.1.12.ebuild:
  Add missing WANT_AUTOCONF/WANT_AUTOMAKE variables.
