@@ -3,6 +3,6 @@ AUX speex-1.2_beta2-optional-ogg-and-cflags.patch 1169 RMD160 8e740233eea96c93a1
 DIST speex-1.1.12.tar.gz 740110 RMD160 24271522d1e1d4b8ccb2833d5fbd75b33789de07 SHA1 8d52c5fc51ae5fd3b1297e5aaa48872dd045a671 SHA256 77c8505bd9b73192789770299e0a727fba9c1d556d853b8cc473bfee393709f8
 DIST speex-1.2beta2.tar.gz 997255 RMD160 6e86dec0b56bae8d65cf3b6476f6d5cb3a74b1ec SHA1 7a0c55763d71f2d845c65968964b1fb1b1897f2e SHA256 e57573e86276972080b5d82746d0968492859f35eaa265e79b5cfb130b26e3da
 EBUILD speex-1.1.12.ebuild 1166 RMD160 283c7ed9d6d9a2ae72f94446835ba06b206fea8b SHA1 aea307e79629cb39f1fce1c0ec6993371bffa84a SHA256 38b1e283c2303418db75be0dc966bb806efaae453fc0f6a76128c04588b43f9f
-EBUILD speex-1.2_beta2.ebuild 1267 RMD160 252268b6a40d49c5124ba178e6f8c0e916eb053c SHA1 50e47f8c19ab6eaef71a13972ba26d94f013814e SHA256 2ead6e0888af75beeac960980d9db8a4f808ccd383c76fe20c25a30e545df0c1
-MISC ChangeLog 8680 RMD160 4271d3e2df7819376efdd1720349c542582eb59f SHA1 e4be0b08c3d41919faa103a6abcd35f689929642 SHA256 a3f59280e3199ddf339fba0667bc8c2f4e69bbb4aa2aa43db3a0f791142ebf8e
+EBUILD speex-1.2_beta2.ebuild 1267 RMD160 98f6cc53d2b6f4b02d7428322ce8524bb538e13f SHA1 3c36ced090dd25a695a685ac2e19b42f8f102d6c SHA256 7d7dfb2d28d54fe00ed6c93070faf3ef384bfe0cbf0098ffe3c84350db899041
+MISC ChangeLog 8831 RMD160 85ab15859ed9b74df4ff598b91878a1205aec1e3 SHA1 cf1ef364f4bf3655614f7a3070db9d93f066c709 SHA256 2dd8f4b125d67abe9772c5bb9ad97815b5f6ab26ca5b4a7e5453e831a6ac7023
 MISC metadata.xml 217 RMD160 906a4752f7a779a157215dc1c5f05e8de62aeb4a SHA1 bb95f672fc20ce8075d27f34c751073cb97849d2 SHA256 cbd33766e3d30e5e0112ad6c57ffc10052659ebb132a0a16fb3462ea8c5a2789
