@@ -1,8 +1,8 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/speex/speex-1.2_beta2.ebuild,v 1.7 2007/11/09 14:35:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/speex/speex-1.2_beta2.ebuild,v 1.8 2007/11/23 22:10:25 drac Exp $
 
-EAPI="prefix"
+EAPI="prefix 1"
 
 inherit autotools eutils flag-o-matic
 
@@ -15,7 +15,7 @@ SRC_URI="http://downloads.xiph.org/releases/speex/${MY_P}.tar.gz"
 LICENSE="BSD"
 SLOT="0"
 KEYWORDS="~amd64 ~ia64 ~ppc-macos ~sparc-solaris ~x86 ~x86-macos ~x86-solaris"
-IUSE="doc ogg sse vorbis-psy wideband"
+IUSE="doc ogg sse vorbis-psy +wideband"
 
 RDEPEND="ogg? ( >=media-libs/libogg-1 )"
 DEPEND="${RDEPEND}"
