@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/speex
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/speex/ChangeLog,v 1.65 2007/11/09 14:35:41 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/speex/ChangeLog,v 1.66 2007/11/23 22:10:25 drac Exp $
+
+  23 Nov 2007; Samuli Suominen <drac@gentoo.org> speex-1.2_beta2.ebuild:
+  Enable USE wideband by default, no reason to have only narrowband by default.
 
   09 Nov 2007; Raúl Porcel <armin76@gentoo.org> speex-1.2_beta2.ebuild:
   alpha/ia64/sparc stable wrt #197937
